// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render for SonarCloud 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <SonarCloudNavBranding />
  <GlobalNavMenu
    appState={
      Object {
        "canAdmin": false,
        "globalPages": Array [],
        "organizationsEnabled": false,
        "qualifiers": Array [],
      }
    }
    currentUser={
      Object {
        "isLoggedIn": false,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
    suggestions={Array []}
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <GlobalNavExplore
      location={
        Object {
          "pathname": "",
        }
      }
    />
    <EmbedDocsPopupHelper
      suggestions={Array []}
    />
    <withRouter(Search)
      appState={
        Object {
          "canAdmin": false,
          "globalPages": Array [],
          "organizationsEnabled": false,
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
    />
    <Connect(GlobalNavUser)
      appState={
        Object {
          "canAdmin": false,
          "globalPages": Array [],
          "organizationsEnabled": false,
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      location={
        Object {
          "pathname": "",
        }
      }
      suggestions={Array []}
    />
  </ul>
</NavBar>
`;

exports[`should render for SonarQube 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <Connect(GlobalNavBranding) />
  <GlobalNavMenu
    appState={
      Object {
        "canAdmin": false,
        "globalPages": Array [],
        "organizationsEnabled": false,
        "qualifiers": Array [],
      }
    }
    currentUser={
      Object {
        "isLoggedIn": false,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
    suggestions={Array []}
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper
      suggestions={Array []}
    />
    <withRouter(Search)
      appState={
        Object {
          "canAdmin": false,
          "globalPages": Array [],
          "organizationsEnabled": false,
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
    />
    <Connect(GlobalNavUser)
      appState={
        Object {
          "canAdmin": false,
          "globalPages": Array [],
          "organizationsEnabled": false,
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      location={
        Object {
          "pathname": "",
        }
      }
      suggestions={Array []}
    />
  </ul>
</NavBar>
`;
